@@ -1,3 +1,9 @@
+2004-06-09  Yoichi NAKAYAMA  <yoichi@geiin.org>
+
+	* std11.el (std11-parse-word-or-comment-or-period): Renamed from
+	`std11-parse-word-or-comment' and allow period.
+	(std11-parse-phrase): Allow parsing obs-phrase in rfc2822.
+
 2004-05-24  Len Trigg  <lenbok@myrealbox.com>
 
 	* mime-conf.el (mime-format-mailcap-command): Quote a file name
